--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crimity",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js", 
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "faker": "^5.5.3",
     "morgan": "^1.10.0",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
