--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "faker": "^5.5.3",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
@@ -27,6 +27,7 @@
     "@babel/node": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
+    "@types/node-fetch": "^2.6.4",
     "nodemon": "^2.0.22"
   }
 }
